# gbif

./: .gitignore  Dockerfile  README.md  deploy.sh  gbif_logic.py  pyproject.toml
docs/: diagram.mmd  entrypoints_overview.md  gbif_api_usage.md
src/: __main__.py  agent.py  api.py  bionomia.py  grscicoll.py  instructor_client.py  llm_parse.py  log.py  parser.py  test_agent.py  utils.py
src/entrypoints/: __init__.py  count_occurence_records.py  count_species_records.py  find_occurrence_records.py  find_species_records.py  find_species_taxonomic_information.py  search_species.py
src/entrypoints/occurrences/: __init__.py  count.py  count_occurence_records.py  count_occurrence_records.py  find_occurrence_by_id.py  find_occurrence_records.py  search.py
src/entrypoints/registry/: __init__.py  find_datasets.py  search.py
src/entrypoints/species/: __init__.py  count.py  count_species_records.py  find_species_records.py  find_species_taxonomic_information.py  find_taxonomic_information.py  (+2 more)
src/enums/: common.py  occurrences.py  registry.py  species.py
src/gadm/: gadm.py
src/gbif/: api.py  fetch.py  parser.py  resolve_parameters.py
src/models/: __init__.py  base.py  bionomia.py  common.py  entrypoints.py  gbif.py  grscicoll.py  location.py  occurrences.py  registry.py  species.py  validators.py
src/resources/: fewshot.json  fewshot.py  prompt.py  prompt_v2.py  sysprompt.md
tests/: conftest.py  test_agent.py  test_agent_entrypoint.py  test_api.py  test_entrypoints.py  test_models.py  test_parser.py
tests/entrypoints/: conftest.py  test_find_occurences.py
(+6 files in other folders)
